--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="banner">
     <h1>Your car</h1>
-    <img src="./images/banner_car.jpg" width="400" alt="blue car">
+    <img src="./images/banner.jpg" alt="blue car">
 </div>
 
 <div>
@@ -30,16 +30,16 @@
 </div>
 
 <div class="cards">
-    <div class="card1">
-        <img src="./images/resizer (1).jpg" alt="car">
+    <div class="card">
+        <img src="./images/card_1.jpg" width="300" alt="car">
         <div class="details">Details</div>
     </div>
-    <div class="card2">
-        <img src="./images/resizer (2).jpg" alt="">
+    <div class="card">
+        <img src="./images/card_2.jpg" width="300" alt="">
         <div class="details">Details</div>
     </div>
-    <div class="card3">
-        <img src="./images/resizer (3).jpg" alt="">
+    <div class="card">
+        <img src="./images/card_3.jpg" width="300" alt="">
         <div class="details">Details</div>
     </div>
 </div>
