design contact page

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 <header class="header">
-    <img src="./images/logo-transparent.png" width="50" class="logo" alt="car">
+    <img src="./images/logo-transparent.png" width="120" class="logo" alt="car">
     <nav class="navigation">
         <ul>
-            <li>Home</li>
-            <li>Vehicles</li>
-            <li>Contact</li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./vehicles.html">Vehicles</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -46,9 +46,10 @@
 
 <div>
     <div class="review">Review</div>
+    <p class="para">Please click here to see customers reviews</p>
 </div>
 </body>
-<footer>
+<footer class="footer">
     &#169;CanadaGt
     <div class="links">
         <a href="https://www.facebook.com/gtcarslimited/"><i class="fa-brands fa-facebook"></i></a>
