design contact and vehicles pages

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,14 @@
         </nav>
     </header>
 
+    <h1> How Can We help You</h1>
+    <Form class="form">
+        <input type="text" name="" id="" placeholder="Name">
+        <input type="email" name="" id="" placeholder="Email">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        
+    </Form>
+
     <footer class="footer">
         &#169;CanadaGt
         <div class="links">
