--- a/vehicles.html
+++ b/vehicles.html
@@ -20,19 +20,19 @@
         </nav>
     </header>
     <div class="container">
-        <div class="card">
+        <div class="vehcard">
             <img src="./images/card_1.jpg" width="300" alt="car">
             <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
         </div>
-        <div class="card">
+        <div class="vehcard">
             <img src="./images/card_2.jpg" width="300" alt="">
             <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
         </div>
-        <div class="card">
+        <div class="vehcard">
             <img src="./images/card_3.jpg" width="300" alt="">
             <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
         </div>
-        <div class="card">
+        <div class="vehcard">
             <img src="./images/card_3.jpg" width="300" alt="">
             <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
         </div>
