adds animation and comments

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <!--  -->
 <header class="header">
     <img src="./images/logo-transparent.png" width="120" class="logo" alt="car">
     <nav class="navigation">
@@ -22,7 +23,7 @@
 
 <div class="banner">
     <h1>Your car</h1>
-    <img src="./images/banner.jpg" alt="blue car">
+    <img src="./images/banner.jpg" alt="blue car" class="anibanner">
 </div>
 
 <div>
