adds design to all pages

--- a/vehicles.html
+++ b/vehicles.html
@@ -1,48 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Vehicles</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
     <header class="header">
-        <img src="./images/logo-transparent.png" width="120" class="logo" alt="car">
-        <nav class="navigation">
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./vehicles.html">Vehicles</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
+      <img
+        src="./images/logo-transparent.png"
+        width="120"
+        class="logo"
+        alt="car"
+      />
+      <nav class="navigation">
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./vehicles.html">Vehicles</a></li>
+          <li><a href="./contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
     <div class="container">
-        <div class="vehcard">
-            <img src="./images/card_1.jpg" width="300" alt="car">
-            <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
-        </div>
-        <div class="vehcard">
-            <img src="./images/card_2.jpg" width="300" alt="">
-            <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
-        </div>
-        <div class="vehcard">
-            <img src="./images/card_3.jpg" width="300" alt="">
-            <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
-        </div>
-        <div class="vehcard">
-            <img src="./images/card_3.jpg" width="300" alt="">
-            <p>Sport car Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita tenetur fugi</p>
-        </div>
+      <div class="vehcard">
+        <img src="./images/card_1.jpg" width="300" alt="car" />
+        <p>
+          Sport car Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Expedita tenetur fugi
+        </p>
+      </div>
+      <div class="vehcard">
+        <img src="./images/card_2.jpg" width="300" alt="" />
+        <p>
+          Sport car Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Expedita tenetur fugi
+        </p>
+      </div>
+      <div class="vehcard">
+        <img src="./images/card_3.jpg" width="300" alt="" />
+        <p>
+          Sport car Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Expedita tenetur fugi
+        </p>
+      </div>
+      <div class="vehcard">
+        <img src="./images/card_3.jpg" width="300" alt="" />
+        <p>
+          Sport car Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Expedita tenetur fugi
+        </p>
+      </div>
     </div>
     <footer class="footer">
-        &#169;CanadaGt
-        <div class="links">
-            <a href="https://www.facebook.com/gtcarslimited/"><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram-square"></i></a>
-        </div>
+      &#169;CanadaGt
+      <div class="links">
+        <a
+          href="https://www.facebook.com/gtcarslimited/"
+          target="_blank"
+          class="facebook"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/explore/search/keyword/?q=cars"
+          target="_blank"
+          class="instagram"
+          ><i class="fa-brands fa-instagram-square"></i
+        ></a>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
