--- a/index.html
+++ b/index.html
@@ -1,60 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Canada GT</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-    <!--  -->
-<header class="header">
-    <img src="./images/logo-transparent.png" width="120" class="logo" alt="car">
-    <nav class="navigation">
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <header class="header">
+      <img
+        src="./images/logo-transparent.png"
+        width="150"
+        class="logo"
+        alt="car"
+      />
+      <nav class="navigation">
         <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./vehicles.html">Vehicles</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./vehicles.html">Vehicles</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<div class="banner">
-    <h1>Your car</h1>
-    <img src="./images/banner.jpg" alt="blue car" class="anibanner">
-</div>
+    <div class="banner">
+      <h1>Your car</h1>
+      <img src="./images/banner.jpg" alt="blue car" />
+    </div>
 
-<div>
-    <input type="text" class="search" placeholder="Search">
-</div>
+    <div>
+      <input type="text" class="search" placeholder="Search" />
+    </div>
 
-<div class="cards">
-    <div class="card">
-        <img src="./images/card_1.jpg" width="300" alt="car">
-        <div class="details">Details</div>
+    <div class="cards">
+      <div class="card">
+        <img src="./images/card_1.jpg" width="300" alt="car" />
+        <div class="details">
+          <a href="./vehicles.html">Details</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./images/card_2.jpg" width="300" alt="" />
+        <div class="details">
+          <a href="./vehicles.html">Details</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./images/card_3.jpg" width="300" alt="" />
+        <div class="details">
+          <a href="./vehicles.html">Details</a>
+        </div>
+      </div>
     </div>
-    <div class="card">
-        <img src="./images/card_2.jpg" width="300" alt="">
-        <div class="details">Details</div>
-    </div>
-    <div class="card">
-        <img src="./images/card_3.jpg" width="300" alt="">
-        <div class="details">Details</div>
-    </div>
-</div>
 
-<div>
-    <div class="review">Review</div>
-    <p class="para">Please click here to see customers reviews</p>
-</div>
-</body>
-<footer class="footer">
-    &#169;CanadaGt
-    <div class="links">
-        <a href="https://www.facebook.com/gtcarslimited/"><i class="fa-brands fa-facebook"></i></a>
-        <a href=""><i class="fa-brands fa-instagram-square"></i></a>
+    <div class="cusReview">
+      <div class="review">Review</div>
+      <p class="para">Please click here to see customers reviews</p>
     </div>
-</footer>
+    <footer class="footer">
+      &#169;Canada Gt
+      <div class="links">
+        <a
+          href="https://www.facebook.com/gtcarslimited/"
+          target="_blank"
+          class="facebook"
+          ><i class="fa-brands fa-facebook"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/explore/search/keyword/?q=cars"
+          target="_blank"
+          class="instagram"
+          ><i class="fa-brands fa-instagram-square"></i
+        ></a>
+      </div>
+    </footer>
+  </body>
 </html>
