adds more styling to all pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- i added links to connect html with css and other links such as awesome to add social icons -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,6 +16,7 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
+  <!-- i added classes to design in css -->
   <body>
     <header class="header">
       <img
@@ -33,7 +35,7 @@
     </header>
 
     <div class="banner">
-      <h1>Your car</h1>
+      <h1>Your Dream car is here</h1>
       <img src="./images/banner.jpg" alt="blue car" />
     </div>
 
