--- a/vehicles.html
+++ b/vehicles.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- This html to design vehicles page -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,6 +16,8 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
+
+  <!-- same as home page i added classes to to target it in css -->
   <body>
     <header class="header">
       <img
@@ -35,29 +38,25 @@
       <div class="vehcard">
         <img src="./images/card_1.jpg" width="300" alt="car" />
         <p>
-          Sport car Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Expedita tenetur fugi
+          Sport cars are very fast and quick car
         </p>
       </div>
       <div class="vehcard">
         <img src="./images/card_2.jpg" width="300" alt="" />
         <p>
-          Sport car Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Expedita tenetur fugi
+          Luxuary cars are expensive cars 
         </p>
       </div>
       <div class="vehcard">
         <img src="./images/card_3.jpg" width="300" alt="" />
         <p>
-          Sport car Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Expedita tenetur fugi
+          The Maserati story began during Italy’s period as a monarchy, with railroad worker Rodolfo Maserati, his wife.
         </p>
       </div>
       <div class="vehcard">
-        <img src="./images/card_3.jpg" width="300" alt="" />
+        <img src="./images/card_1.jpg" width="300" alt="" />
         <p>
-          Sport car Lorem ipsum, dolor sit amet consectetur
-          adipisicing elit. Expedita tenetur fugi
+          Mercedes-Benz, commonly referred to as Mercedes, is a German luxury and commercial vehicle automotive brand established in 1926
         </p>
       </div>
     </div>
