--- a/vehicles.html
+++ b/vehicles.html
@@ -56,7 +56,7 @@
       <div class="vehcard">
         <img src="./images/card_1.jpg" width="300" alt="" />
         <p>
-          Mercedes-Benz, commonly referred to as Mercedes, is a German luxury and commercial vehicle automotive brand established in 1926
+          Mercedes-Benz, commonly referred to as Mercedes, is a German luxury and commercial vehicle automotive brand
         </p>
       </div>
     </div>
